contact link in footer wasn't quite aligned correctly

--- a/fedoraproject.org/static/css/fedora960.css
+++ b/fedoraproject.org/static/css/fedora960.css
@@ -365,6 +365,7 @@ a#nav-special {
 
 #footer li.first {
     border-left:medium none;
+    padding-left: 0;
 }
 
 #footer li {
